# slop-factory

./: .env.example  .gitignore  BUILD.md  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
config/series/: fridge-detectives.json  sewer-surfers.json
research/: 01-local-generation-models.md  02-script-story-generation.md  03-audio-tts-music.md  04-video-assembly-pipeline.md  05-tiktok-upload-automation.md  06-tiktok-monetization.md  07-rules-policy-compliance.md  08-economics-profitability.md  09-recommended-workflow.md  10-cloud-gpu-and-mac-only.md  11-tiktok-algorithm-and-optimization.md  12-interface-control-and-cadence.md  13-optimal-path-to-money.md  14-monetization-eligibility-canadian-in-us.md  15-v0-spec.md  MASTER.md
research/affiliate-pivot/: 00-master.md  01-content-strategy.md  02-architecture-changes.md  03-data-sourcing-layer.md  04-affiliate-mechanics-compliance.md  05-economics-paid-scaling.md  06-market-evidence.md  synthesis.md
research/tiktok-ai-slop/: 00-master.md  01-format-and-operators.md  02-pipeline-and-tooling.md  03-speed-and-throughput.md  04-economics.md  synthesis.md
scripts/: acestep_gen.py  establish_characters.py  m0_check.py  prefetch_models.py  train_character_lora.py
src/: config.py  schemas.py
src/pipeline/: assemble.py  captions.py  framing.py  hook.py  images.py  logging_setup.py  music.py  orchestrator.py  qc.py  script_gen.py  timing.py  tts.py
src/ui/: app.py
src/upload/: tiktok_stub.py
