[project]
name = "video-gen"
version = "0.1.0"
description = "AI TikTok character-video pipeline (v0, local on Apple Silicon)"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Core (M0) — pinned to the verified, installed set (BUILD.md §4 ground rule)
    "anthropic==0.109.1",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "streamlit==1.58.0",
    "huggingface-hub==0.36.2",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "numpy==2.4.6",
    "pillow==11.3.0",
    "soundfile==0.14.0",
    "librosa==0.11.0",
    # M2: images (mflux / FLUX.2-klein-4B)
    "mflux==0.18.0",
    # M3/M4: TTS + captions
    "kokoro==0.9.4",
    "whisperx==3.8.6",
    # M5: loudness + assembly helpers
    "ffmpeg-normalize==1.37.8",
    "moviepy==2.2.1",
    # M7: video hook (diffusers LTXPipeline route)
    "diffusers==0.38.0",
    "transformers==4.57.6",
    "accelerate==1.13.0",
    # M6 (music): stable-audio-tools is NOT installable on Python 3.12 — it pins
    # legacy deps (pywavelets==1.4.1, sentencepiece==0.1.99) that fail to build.
    # Deferred to M6; use the ACE-Step repo route (settings.yaml default) instead.
    # "stable-audio-tools",
]

[tool.uv]
# mflux 0.18 over-declares newer floors (transformers>=5, pillow>=12.1.1, huggingface-hub>=1.1.6)
# than the verified, installed set. It reimplements its models in MLX (no `from transformers`
# in the FLUX.2 code; transformers is used only for tokenizers) and runs on the installed
# versions, which the rest of the stack (whisperx, etc.) also accepts. Pin them here so
# `uv run`/`uv sync` resolve to the already-installed set instead of forcing an unvalidated
# upgrade. Revisit per-package if a stage actually needs one of mflux's newer APIs.
override-dependencies = [
    "transformers==4.57.6",
    "pillow==11.3.0",
    "huggingface-hub==0.36.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "src.pipeline", "src.upload", "src.ui"]
